# vert

./: CLAUDE.md  LICENSE  README.md  README.zh.md  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: i18n-autofill.mjs  sync-changelog.mjs  sync-project-triage.mjs
.github/workflows/: ci.yml  docs.yml  i18n-autofill.yml  notify.yml  project-triage.yml  publish-packages.yml  release.yml  sync-changelog.yml  sync-mirrors.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/fonts/: FONTS.txt
src-tauri/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/converter/: config.rs  data.rs  document.rs  image.rs  mod.rs  svg.rs  traits.rs
src/components/: ConversionPanel.vue  ConversionResult.vue  FileDropZone.vue  FormatSelector.vue
src/i18n/: index.ts  messages.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: formats.ts
