[package]
name = "vert"
version = "0.1.0"
description = "File format converter — config, data, and document formats with desktop and CLI interfaces"
authors = ["jean3690"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "vert"
path = "src/cli.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
java-properties = "2.0"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
zip = "2.2"
genpdf = "0.2"
pulldown-cmark = "0.12"
scraper = "0.22"
thiserror = "2"

