[package]
name = "vert"
version = "0.2.0"
description = "Universal file format converter — config, data, document, and image formats with desktop and CLI interfaces"
authors = ["jean3690"]
license = "Apache-2.0"
edition = "2021"
default-run = "vert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "vert-cli"
path = "src/cli.rs"

[[bin]]
name = "vert"
path = "src/main.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["tauri", "tauri-plugin-opener", "tauri-plugin-dialog"]

[dependencies]
tauri = { version = "2", optional = true , features = [] }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
ini = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
java-properties = "2.0"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
zip = "2.2"
genpdf = "0.2"
pulldown-cmark = "0.12"
scraper = "0.22"
thiserror = "2"
pdf-extract = "0.9"

# Image conversion (pure Rust, no system deps)
image = { version = "0.25", default-features = true, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }

# SVG rendering (pure Rust)
resvg = { version = "0.44", default-features = false, features = ["text"] }
# usvg SVG parser (re-exported by resvg, explicit for our usage)
usvg = { version = "0.44", default-features = false, features = ["text"] }

# External tool detection
which = "7"

